cluster/apps/monitoring/rancher/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`rancher.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: rfc1918
      services:
        - name: rancher
          namespace: cattle-system
          port: 80
          kind: Service

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
